# opengl-experiments

./: CMakeLists.txt  README.md
include/utils/: shader.hpp
src/: CMakeLists.txt  main.cpp
src/shaders/basics/: yellow.glsl
src/shaders/basics/shaders/: fshader.glsl  vshader.glsl
src/utils/: CMakeLists.txt  shader.cpp
